# bwm

./: .gitignore  CMakeLists.txt  README.md  bwm.h  compile.sh  libbwm.dylib.blacklist
program/: cfmacro.h  cg.m  keybinds_and_config.m  request.m  server.m  shared.h
remote/: animstate.h  animstate.m  decoration.m  remote.m
